Keep track of the files that were successfully scanned without parsing